--- a/3-1/todo-without-redux/src/App.css
+++ b/3-1/todo-without-redux/src/App.css
@@ -1,137 +1,206 @@
-*{
-  margin:0;
-  padding:0;
-  outline:none;
-  font-family: apple--apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, cursive;
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  font-family: Quicksand, apple--apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, cursive;
+  font-weight: 900;
 }
-header{
-  background:linear-gradient(to right,#cc2b5e, #753a88);
-  color:#fff;
-  text-shadow:  1px 1px 2px #2b2b2b;
-  padding:16px;
-}
-header #appname{
-  display:block;
+
+header {
+  background: #fff;
+  padding: 6px;
+  height: 40px;
   text-align: center;
-  font-size:24px;
-  padding:8px;
+  z-index: 100;
+  top:0;
+  position: fixed;
+  width: 100%;
+  box-shadow: -2px -1px 3px #000000;
+  line-height: 40px;
 }
-header input, header button{
-  padding:15px;
+
+header #appname {
+  font-size: 18px;
+}
+
+#header {
+  width:100%;
+  height:160px;
+  box-sizing: border-box;
+  position: fixed;
+  top: 52px;
+  background: url("img/bg.png");
+  background-size: cover;
+  color: #fff;
+  text-shadow: 1px 1px 2px #2b2b2b;
+  padding: 16px;
+  box-shadow: 0px 0px 4px #444;
+}
+
+#header span {
+  font-size: 22px;
+  display: block;
+  padding: 6px;
+}
+
+#header #appname {
+  display: block;
+  text-align: center;
+  font-size: 24px;
+  padding: 8px;
+}
+
+#header input, #header button {
+  padding: 15px;
   display: inline-block;
   box-sizing: border-box;
   outline: none;
-  border:none;
-  font-size:16px;
-  box-shadow: 2px 2px 0px #333;
+  border: none;
+  font-size: 16px;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 3px;
 }
-header input{
-  width:80%;
+
+#header input {
+  width: 80%;
 }
-header button{
+
+#header button {
   width: 19%;
+  margin:0.5%;
   text-align: center;
   transition: background-color 0.25s;
 }
-header button:hover{
-  background:#02aab0;
-  color:#eee;
+
+#header button:hover {
+  background: #7E57C2;
+  color: #eee;
 }
+
 /* list remind */
-#list li{
+
+#list li {
   position: relative;
-  list-style-type:none;
-  padding:12px;
-  padding-left:40px;
-  font-size:18px;
-  transition: 0.55s;
-  background:linear-gradient(to right,#fff, #fff);
-  background-position: -200px;
+  list-style-type: none;
+  padding: 20px 12px;
+  padding-left: 40px;
+  font-size: 18px;
+  transition: 0.5s;
+  background: linear-gradient(to right, #fff, #fff);
   cursor: pointer;
+  margin: 12px;
+  box-shadow: 0 9px 16px rgba(0, 0, 0, 0.1), 0 0px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  overflow: hidden;
 }
-#list li:hover{
-  background:linear-gradient(to right,#c74b74, #f7bb97);
-  background-position:0;
+
+#list li:hover {
+  background: #9575CD;
+  color: #fff;
+  box-shadow: 0 12px 19px rgba(0, 0, 0, 0.3), 0 0px 9px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
 }
-#list .done{
-  padding-left:22px;
+
+#list li:hover .remove {
+  color: #fff;
+}
+
+#list .done {
+  padding-left: 22px;
   text-decoration: line-through;
 }
-#list .done:before{
-      content: '✓';
-      margin-right:7px;
-      display:inline-block;
+
+#list .done:before {
+  content: '✓';
+  margin-right: 7px;
+  display: inline-block;
 }
-#list li .remove{
+
+#list li .remove {
   position: absolute;
-  right:0;
-  padding: 0 17px;
-  margin-top:-12px;
+  right: 0;
+  padding: 0 25px;
+  margin-top: -20px;
   box-sizing: border-box;
-  border:none;
-  background:none;
-  font-size:20px;
-  height:100%;
-  transition:0.25s;
+  border: none;
+  background: none;
+  font-size: 18px;
+  height: 100%;
+  transition: 0.25s;
 }
-#list li .remove:hover{
-  background:rgb(231, 85, 85);
-  color:#fff;
+
+#list li .remove:hover {
+  background: rgb(231, 85, 85);
+  color: #fff;
 }
-#alert{
-  padding:6px;
-  background:rgb(241, 91, 91);
-  color:#fff;
+#list{
+  position: fixed;
+  top:213px;
+  bottom:0;
+  width:100%;
+}
+#alert {
+  padding: 8px 0;
+  background: rgb(241, 91, 91);
+  color: #fff;
   text-align: center;
   position: fixed;
-  bottom:-100px;
-  right:0;
-  left:0;
+  bottom: -100px;
+  right: 0;
+  left: 0;
   transition: 0.5s;
 }
+
 @media only screen and (min-width: 768px) {
-  body{
-      background:#f2f2f2;
+  body {
+    background: #f2f2f2;
   }
-  header{
-      position: fixed;
-      top:35px;
-      left:35px;
-      width:350px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-      border-radius:2px;
-      overflow: hidden;
+  #header {
+    height:auto;
+    left: 0px;
+    bottom: 0;
+    width: 350px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    overflow: hidden;
+    box-sizing: border-box;
   }
-  header input{
-      width:100%;
+  #alert{
+    width: 350px;
   }
-  header button{
-      margin-top:6px;
-      width:100%;
+  #header input {
+    width: 100%;
   }
-  #list{
-      background:#fff;
-      position: fixed;
-      top:35px;
-      bottom:35px;
-      left:450px;
-      right:35px;
-      padding:0px;
-      border-radius:2px;
-      overflow: hidden;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  #header button {
+    margin:0;
+    margin-top: 6px;
+    width: 100%;
+  }
+  #list {
+    z-index: 1;
+    overflow: visible;
+    width: auto;
+    background: #fff;
+    position: fixed;
+    top: 52px;
+    bottom: 0;
+    left: 350px;
+    right: 0px;
+    padding: 0px;
+    box-sizing: border-box;
   }
 }
-#empty{
-  display:none;
-  color:#aaa;
+
+#empty {
+  color: #aaa;
   text-align: center;
 }
-#empty img{
-  width:250px
+
+#empty img {
+  width: 250px
 }
-#empty span{
-  font-size:30px;
-  display:block;
+
+#empty span {
+  font-size: 30px;
+  display: block;
   pointer-events: none;
 }
